# PeerCast

./: .env.example  .gitignore  .npmrc  .prettierignore  README.md  compose.yaml  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  decisions.md  networking.md  quality.md  report.md
e2e/: responsive.spec.ts  signaling.spec.ts
scripts/: start-shared.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  network.rs  signaling.rs  tailscale.rs
src/lib/: signaling-protocol.ts
src/routes/: +page.svelte
